tests/rustdoc-ui/doc-cfg.stderr
error[E0805]: malformed `doc` attribute input
  --> $DIR/doc-cfg.rs:3:1
   |
LL | #[doc(cfg(), cfg(foo, bar))]
   | ^^^^^^^^^--^^^^^^^^^^^^^^^^^
   |          |
   |          expected a single argument here

error[E0805]: malformed `doc` attribute input
  --> $DIR/doc-cfg.rs:3:1
   |
LL | #[doc(cfg(), cfg(foo, bar))]
   | ^^^^^^^^^^^^^^^^----------^^
   |                 |
   |                 expected a single argument here

error[E0805]: malformed `doc` attribute input
  --> $DIR/doc-cfg.rs:6:1
   |
LL | #[doc(cfg())]
   | ^^^^^^^^^--^^
   |          |
   |          expected a single argument here

error[E0805]: malformed `doc` attribute input
  --> $DIR/doc-cfg.rs:7:1
   |
LL | #[doc(cfg(foo, bar))]
   | ^^^^^^^^^----------^^
   |          |
   |          expected a single argument here

error[E0539]: malformed `doc` attribute input
  --> $DIR/doc-cfg.rs:8:1
   |
LL | #[doc(auto_cfg(hide(foo::bar)))]
   | ^^^^^^^^^^^^^^^^^^^^--------^^^^
   |                     |
   |                     expected a valid identifier here

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0539, E0805.
For more information about an error, try `rustc --explain E0539`.
